refactor: clean up InstancesView nd create CreateInstanceView
